--- a/app/assets/stylesheets/pages/home/_home_contact_modal.scss
+++ b/app/assets/stylesheets/pages/home/_home_contact_modal.scss
@@ -63,12 +63,14 @@
       transition: all 0.2s ease;
       cursor: pointer;
       -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
-      touch-action: manipulation;
-      user-select: none;
-      -webkit-user-select: none;
+      -webkit-touch-callout: default;
+      touch-action: auto;
+      position: relative;
+      z-index: 10;
       
       i {
         font-size: 1rem;
+        pointer-events: none;
       }
       
       &:hover,
